# Chat-Application

./: README.md  package-lock.json  package.json  server.js
api/: README.md  package.json  pyproject.toml
api/src/: index.ts
docs/: ideas.md
katana/: .gitignore  README.md  package.json  pyproject.toml
katana/src/: index.ts
public/: chat.html  index.html
public/CSS/: style.css
public/JS/: main.js
utils/: messages.js  users.js
vanilla/: README.md  package-lock.json  server.js
vanilla/public/: chat.html
vanilla/public/CSS/: style.css
vanilla/public/JS/: main.js
vanilla/utils/: users.js
web/: package-lock.json
